k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kura-crm-web-ingress
  namespace: kura-crm
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/rate-limit-rps: "300"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - app.kura-crm.com
      secretName: kura-crm-web-tls
  rules:
    - host: app.kura-crm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kura-crm-web
                port:
                  number: 80
